# Plotcpp

./: .gitignore  LICENSE  README.md
gnuplot/: CMakeLists.txt  data.txt  data2d.txt  main.cpp  plot.sh  plot3d.sh
matplotlib-cpp/: CMakeLists.txt  main.cpp
